assets/css/product-card.css
/* ... */
.offer-widget .price {
  text-align: right;
  padding: 0;
}
.offer-widget:has(.price[data-out-of-stock]) {
  margin-top: 30px;
  padding: 18px 26px;
}
/* Pricing */
.price_old {
  font-size: 18px;
  font-weight: 600;
  line-height: 1;
  text-decoration: none;
  color: rgb(139, 145, 160, 0.5);
  position: relative;
  display: inline-block;
  margin-right: 16px;
}
.price_old .product_price_integer {
  font-size: 28px;
  font-weight: 400;
}
.price ins {
  text-decoration: none;
}
.price strong,
.price ins {
  font-size: 28px;
  font-weight: 600;
  line-height: 1;
}
.price strong .product_price_integer,
.price ins .product_price_integer {
  font-size: 48px;
  font-weight: 400;
}
.price_old::before {
  content: '';
  display: inline-block;
  position: absolute;
  left: -10px;
  top: 56%;
  transform: translateY(-50%) rotate(-15deg);
  width: 100%;
  height: 2px;
  background-color: #ffcc81;
}
/* Pricing, out-of-stock */
.price[data-out-of-stock] {
  position: relative;
}
[data-out-of-stock]::before {
  content: 'Not available';
  font-size: 20px;
  color: rgb(139, 145, 160, 0.5);
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  left: 0;
}

[data-out-of-stock] del {
  display: none;
}
[data-out-of-stock] strong,
[data-out-of-stock] ins {
  font-size: 20px;
  color: rgb(139, 145, 160, 0.5);
}
[data-out-of-stock] strong .product_price_integer,
[data-out-of-stock] ins .product_price_integer {
  font-size: 35px;
  font-weight: 400;
}
/* Fieldsets */
.wrapper_coupon_qty_fields {
  padding-top: 12px;
}
[data-out-of-stock] + .wrapper_coupon_qty_fields {
  display: none;
}
.wrapper_coupon_qty_fields fieldset {
  border: 0;
  padding: 0;
  margin: 0;
}
.wrapper_coupon_qty_fields fieldset {
  padding-top: 16px;
}
.wrapper_coupon_qty_fields fieldset label {
  font-size: 10px;
  line-height: 1.1;
  padding-bottom: 10px;
  display: inline-block;
}
.wrapper_coupon_qty_fields fieldset input {
  font-size: 30px;
  font-weight: 600;
  width: 100%;
  padding: 10px 26px;
  border: 0;
  border-radius: 100px;
  line-height: 1;
}
/* Coupon fieldset */
.coupon_input_wrapper {
  position: relative;
  display: block;
}
.coupon_add_button {
  background-color: transparent;
  border: 0;
  cursor: pointer;
  padding: 0;
  position: absolute;
  right: 22px;
  top: 50%;
  transform: translateY(-50%);
}
.coupon_add_button svg {
  vertical-align: middle;
}
/* quantity fieldset */
.product_qty_wrapper {
  position: relative;
  display: block;
}
.product_qty_wrapper button {
  background: none;
  border: 0;
  padding: 0;
  position: absolute;
  top: 50%;
  transform: translateY(-50%);
  cursor: pointer;
  padding: 22px 30px;
  display: flex;
}
.wrapper_coupon_qty_fields .product_qty_increase {
  right: 0;
}
.wrapper_coupon_qty_fields .product_qty_decrease {
  left: 0;
}
.wrapper_coupon_qty_fields .product_qty_input {
  text-align: center;
  padding-left: 48px;
  padding-right: 48px;
}
.wrapper_coupon_qty_fields .product_qty_input::-webkit-outer-spin-button,
.wrapper_coupon_qty_fields .product_qty_input::-webkit-inner-spin-button {
  -webkit-appearance: none;
  margin: 0;
}
.wrapper_coupon_qty_fields .product_qty_input[type='number'] {
  -moz-appearance: textfield;
}
/* Offer buttons */
.buy_buttons {
  display: flex;
  gap: 15px;
  border: 0;
  padding: 0;
  margin: 0;
  margin-left: auto;
  margin-top: 35px;
}
.buy_buttons button {
  height: 40px;
  display: flex;
  align-items: center;
  justify-content: center;
  border: 0;
  border-radius: 20px;
  padding: 10px 22px;
  cursor: pointer;
}
.buy_now_paypal {
  background-color: #f6c305;
  font-size: 9px;
  vertical-align: middle;
  gap: 10px;
  flex: 2;
}
.buy_now_paypal svg {
  height: 21px;
  width: auto;
}
.buy_now_paypal span {
  padding-top: 3px;
}
.add_cart {
  background-color: #202020;
  margin: 0;
  min-width: 115px;
  flex: 1;
}
.add_cart svg {
  margin-top: -2px;
}
.offer-widget:has([data-out-of-stock]) + .buy_buttons {
  display: none;
}
@media (min-width: 768px) {
  /* ====== Offer widget ====== */
  .offer-widget {
    border-radius: 50px;
    padding: 12px 24px 24px;
    margin-top: 30px;
  }
  .offer-widget:has(.price[data-out-of-stock]) {
    padding-left: 32px;
    padding-right: 32px;
    padding: 26px 35px;
  }

  /* Pricing */
  .price_old {
    font-size: 18px;
  }
  .price_old .product_price_integer {
    font-size: 28px;
  }
  .price strong,
  .price ins {
    font-size: 28px;
  }
  .price strong .product_price_integer,
  .price ins .product_price_integer {
    font-size: 48px;
  }

  /* Pricing, out-of-stock */
  [data-out-of-stock]::before {
    font-size: 28px;
  }
  [data-out-of-stock] strong,
  [data-out-of-stock] ins {
    font-size: 18px;
  }
  [data-out-of-stock] strong .product_price_integer,
  [data-out-of-stock] ins .product_price_integer {
    font-size: 28px;
  }
  /* Fieldsets */
  .wrapper_coupon_qty_fields fieldset {
    display: inline-block;
    padding: 0;
  }
  .wrapper_coupon_qty_fields fieldset label {
    font-size: 12px;
    padding-bottom: 8px;
    padding-left: 12px;
  }
  .wrapper_coupon_qty_fields fieldset input {
    font-size: 24px;
    padding: 14px 26px;
  }
  .product_qty_wrapper button {
    padding: 20px 24px;
  }
  /* Coupon fieldset */
  .wrapper_coupon_qty_fields .coupon_fieldset {
    width: 52%;
    margin-right: calc(14% - 8px) !important;
  }
  .coupon_add_button {
    right: 12px;
  }
  /* quantity fieldset */
  .wrapper_coupon_qty_fields .product_qty_fieldset {
    width: 35%;
  }
  /* Offer buttons */
  .buy_buttons {
    gap: 20px;
    margin-top: 22px;
  }
  .buy_buttons button {
    height: 60px;
    border-radius: 30px;
  }
  .buy_now_paypal span {
    font-size: 12px;
  }
  .buy_now_paypal svg {
    height: 28px;
    width: auto;
  }
  .add_cart svg {
    height: 35px;
    width: auto;
  }
}
/* ... */

